made changes in the html doument

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Save Tweets Into Storage</title>
+    <title>Save List Into Storage</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -16,16 +16,16 @@
             <h1>Local Storage</h1>
             <div class="row">
                 <div class="six columns">
-                    <label for="tweet">Tweet:</label>
+                    <label for="List">List:</label>
                     <form action="#" id="form">
-                            <label for="tweet"></label>
-                            <textarea id="tweet" class="u-full-width"></textarea>
-                            <input type="submit" class="button u-full-width button-primary" value="Save Tweet">
+                            <label for="List"></label>
+                            <textarea id="List" class="u-full-width"></textarea>
+                            <input type="submit" class="button u-full-width button-primary" value="Save List">
                     </form>
                 </div> <!--.six-->
                 <div class="six columns">
-                    <h2>My Tweets</h2>
-                    <div id="tweet-list"></div>
+                    <h2>My Lists</h2>
+                    <div id="List-list"></div>
                 </div> <!--.six-->
             </div>
         </div>
