--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="content">
         <div class="container">
-            <h1>Local Storage</h1>
+            <h1>Weekly Grocery List</h1>
             <div class="row">
                 <div class="six columns">
                     <label for="List">List:</label>
