nopw the items can be saved in the local storage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div> <!--.six-->
                 <div class="six columns">
                     <h2>My Lists</h2>
-                    <div id="List-list"></div>
+                    <div id="List-List"></div>
                 </div> <!--.six-->
             </div>
         </div>
