fixed some bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Save List Into Storage</title>
+    <title>Save grocerys Into Storage</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -13,19 +13,19 @@
 
     <div id="content">
         <div class="container">
-            <h1>Weekly Grocery List</h1>
+            <h1>Local Storage</h1>
             <div class="row">
                 <div class="six columns">
-                    <label for="List">List:</label>
+                    <label for="grocery">grocery:</label>
                     <form action="#" id="form">
-                            <label for="List"></label>
-                            <textarea id="List" class="u-full-width"></textarea>
-                            <input type="submit" class="button u-full-width button-primary" value="Save List">
+                            <label for="grocery"></label>
+                            <textarea id="grocery" class="u-full-width"></textarea>
+                            <input type="submit" class="button u-full-width button-primary" value="Save grocery">
                     </form>
                 </div> <!--.six-->
                 <div class="six columns">
-                    <h2>My Lists</h2>
-                    <div id="List-List"></div>
+                    <h2>My grocerys</h2>
+                    <div id="grocery-list"></div>
                 </div> <!--.six-->
             </div>
         </div>
