--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Save grocerys Into Storage</title>
+    <title>Save grocery Into Storage</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -16,7 +16,7 @@
             <h1>Local Storage</h1>
             <div class="row">
                 <div class="six columns">
-                    <label for="grocery">grocery:</label>
+                    <label for="grocery">Grocery:</label>
                     <form action="#" id="form">
                             <label for="grocery"></label>
                             <textarea id="grocery" class="u-full-width"></textarea>
@@ -24,7 +24,7 @@
                     </form>
                 </div> <!--.six-->
                 <div class="six columns">
-                    <h2>My grocerys</h2>
+                    <h2>My Grocery</h2>
                     <div id="grocery-list"></div>
                 </div> <!--.six-->
             </div>
